Fri, Feb 29, 2008 Amos Anderson
1.  I added some better example files.
2.  I committed some changes relating to problems on the ALC machine. If you're
    using an older MPICH, then the MPI datatypes might be slightly different. Look at
    QMCProperties and QMCProperty for details.
3.  I added a method to check whether a QMcBeaver executable produces results that match
    reference data. I've started making some input files in the test directory to help
    verify that results aren't changing. This section needs more work, but this is a start.
    It makes it a lot easier to do debugging, too... :-)

Mon, Feb 25, 2008 Amos Anderson
1.  I added a new, unified submission script, qmcsub.py. I merged everything from the qsub,
    bsub, and llnl qmcbeaverrun.py scripts so that now it's much easier to make
    changes and let everybody benefit. The reason for doing this was that all the scripts
    needed to be changed to reflect the new directory handling, so instead of updating all of them,
    I merged them. It should be easier to add new machines.

2.  I fixed a bug relating to the way determinants are updated. In QMCSlater, there is a part where
    we use Array2D::inverseUpdateOneColumn to avoid recalculating the entire determinant when multiple
    determinants are used. The bug was that sometimes sequential determinants used the same orbital, but
    in different positions. This meant that there was a possibility that the same orbital (temporarily) showed
    up twice in the same determinant, resulting in a linear dependency.

Wed, Feb 20, 2008 Amos Anderson
1.  I changed the way checkpoints are handled. Previously, QMcBeaver was responsible
    for creating the subdirectory to place the checkpoints into. Now, it will look
    in temp_dir/checkpoint_input_name for the location of checkpoints to read in, and
    it will write checkpoints into the temp_dir/checkout_file_name directory.
