@@ -1,3 +1,8 @@
+Wed, March 26, 2008 Daniel R Fisher
+1.  I fixed a problem with the gamess2qmcbeaver.py script.  It was not
+    extracting the basis set properly when symmetry was used in the
+    geometry.  
+
 Fri, Feb 29, 2008 Amos Anderson
 1.  I added some better example files.
 2.  I committed some changes relating to problems on the ALC machine. If you're
